--- a/osgp/platform/osgp-adapter-ws-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-distributionautomation/pom.xml
@@ -18,7 +18,6 @@
     <relativePath>../parent-platform/pom.xml</relativePath>
   </parent>
 
-  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>osgp-adapter-ws-distributionautomation</artifactId>
 
   <packaging>war</packaging>
@@ -204,6 +203,18 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
