--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/pom.xml
@@ -32,34 +32,36 @@
     <display.version>${project.version}-${BUILD_TAG}</display.version>
     <cucumber.version>4.2.6</cucumber.version>
     <spring.test.version>4.3.23.RELEASE</spring.test.version>
+    <skip.integration.tests>false</skip.integration.tests>
+    <skip.unit.tests>false</skip.unit.tests>
 
   </properties>
 
-  <profiles>
-    <!-- development profile -->
-    <profile>
-      <id>development</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <build.profile.id>development</build.profile.id>
-        <!-- run unit tests only -->
-        <skip.integration.tests>true</skip.integration.tests>
-        <skip.unit.tests>false</skip.unit.tests>
-      </properties>
-    </profile>
-    <!-- integration-test profile -->
-    <profile>
-      <id>integration-test</id>
-      <properties>
-        <build.profile.id>integration-test</build.profile.id>
-        <!-- run integration tests only -->
-        <skip.integration.tests>false</skip.integration.tests>
-        <skip.unit.tests>true</skip.unit.tests>
-      </properties>
-    </profile>
-  </profiles>
+<!--   <profiles> -->
+<!--     development profile -->
+<!--     <profile> -->
+<!--       <id>development</id> -->
+<!--       <activation> -->
+<!--         <activeByDefault>true</activeByDefault> -->
+<!--       </activation> -->
+<!--       <properties> -->
+<!--         <build.profile.id>development</build.profile.id> -->
+<!--         run unit tests only -->
+<!--         <skip.integration.tests>true</skip.integration.tests> -->
+<!--         <skip.unit.tests>false</skip.unit.tests> -->
+<!--       </properties> -->
+<!--     </profile> -->
+<!--     integration-test profile -->
+<!--     <profile> -->
+<!--       <id>integration-test</id> -->
+<!--       <properties> -->
+<!--         <build.profile.id>integration-test</build.profile.id> -->
+<!--         run integration tests only -->
+<!--         <skip.integration.tests>false</skip.integration.tests> -->
+<!--         <skip.unit.tests>true</skip.unit.tests> -->
+<!--       </properties> -->
+<!--     </profile> -->
+<!--   </profiles> -->
 
   <build>
     <plugins>
@@ -79,78 +81,76 @@
           </nonFilteredFileExtensions>
         </configuration>
       </plugin>
-        <!-- build helper maven plugin used for adding integration-test directories -->
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.9.1</version>
-          <executions>
-            <!-- add integration-test source directory -->
-            <execution>
-              <id>add-integration-test-sources</id>
-              <phase>generate-test-sources</phase>
-              <goals>
-                <goal>add-test-source</goal>
-              </goals>
-              <configuration>
-                <sources>
-                  <source>src/integration-test/java</source>
-                </sources>
-              </configuration>
-            </execution>
-            <!-- add integration-test resource directory -->
-            <execution>
-              <id>add-integration-test-resources</id>
-              <phase>generate-test-resources</phase>
-              <goals>
-                <goal>add-test-resource</goal>
-              </goals>
-              <configuration>
-                <resources>
-                  <resource>
-                    <filtering>true</filtering>
-                    <directory>src/integration-test/resources</directory>
-                  </resource>
-                </resources>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <!-- maven surefire plugin for running unit tests -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18</version>
-          <configuration>
-            <!-- skip tests if value of skip.unit.tests property is true -->
-            <skipTests>${skip.unit.tests}</skipTests>
-            <!-- excludes integration tests when unit tests are run -->
-            <excludes>
-              <exclude>**/TestRunnerIT.java</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
-
-        <!--  maven failsafe plugin for running integration tests -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.18</version>
-          <executions>
-            <execution>
-              <id>integration-test</id>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-              <configuration>
-                <!-- skip tests if value of skip.integration.tests property is true -->
-                <skipTests>${skip.integration.tests}</skipTests>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-
+      <!-- build helper maven plugin used for adding integration-test directories -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.9.1</version>
+        <executions>
+          <!-- add integration-test source directory -->
+          <execution>
+            <id>add-integration-test-sources</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/integration-test/java</source>
+              </sources>
+            </configuration>
+          </execution>
+          <!-- add integration-test resource directory -->
+          <execution>
+            <id>add-integration-test-resources</id>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>add-test-resource</goal>
+            </goals>
+            <configuration>
+              <resources>
+                <resource>
+                  <filtering>true</filtering>
+                  <directory>src/integration-test/resources</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- maven surefire plugin for running unit tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18</version>
+        <configuration>
+          <!-- skip tests if value of skip.unit.tests property is true -->
+          <skipTests>${skip.unit.tests}</skipTests>
+          <!-- excludes integration tests when unit tests are run -->
+          <excludes>
+            <exclude>**/TestRunnerIT.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <!--  maven failsafe plugin for running integration tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.18</version>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <!-- skip tests if value of skip.integration.tests property is true -->
+              <skipTests>${skip.integration.tests}</skipTests>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
