--- a/osgp/platform/osgp-adapter-domain-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/pom.xml
@@ -158,6 +158,15 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
