--- a/osgp/platform/osgp-adapter-domain-admin/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-admin/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
-    <version>4.35.0-SNAPSHOT</version>
+    <version>4.35.0</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
   </parent>
 
