FLEX-4925 ~ Adds startup parameters

--- a/osgp/protocol-adapter-iec61850/osgp-mode-cli/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-mode-cli/pom.xml
@@ -2,6 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opensmartgridplatform</groupId>
   <artifactId>osgp-mode-cli-iec61850</artifactId>
+  <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>osgp-mode-cli-iec61850</name>
   <description>CLI (command line interface) to manipulate the mode (local/remote) of a device.</description>
