--- a/osgp/protocol-adapter-iec61850/osgp-mode-cli/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-mode-cli/pom.xml
@@ -17,6 +17,27 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.1</version>
+        <configuration>
+          <transformers>
+            <transformer
+              implementation= "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              <mainClass>org.opensmartgridplatform.iec61850.ConsoleModeClient</mainClass>
+            </transformer>
+          </transformers>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   
@@ -34,6 +55,7 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
     </dependency>
+
   </dependencies>
   
 </project>
