--- a/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -187,7 +187,8 @@ scheduling.task.device.connection.max.allowed.age=2
 # ===   Event Retrieval settings                        ===
 # =========================================================
 # Interval of scheduled task.
-scheduling.task.event.retrieval.cron.expression=0 */30 * * * *
+scheduling.task.event.retrieval.cron.expression=0 0/30 0-7,12,16-23 * * *
+scheduling.task.event.retrieval.cron.timezone=Europe/Amsterdam
 # Number of threads in thread pool.
 scheduling.task.event.retrieval.pool.size=10
 # Name of the manufacturer (case sensitive) of devices to retrieve events for. 
