--- a/osgp/shared/shared/pom.xml
+++ b/osgp/shared/shared/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>4.36.0-SNAPSHOT</version>
+    <version>4.36.0</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
