FLEX-4917 ~ Adds exponential back off for unreachable devices to event retrieval task.

--- a/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -187,7 +187,7 @@ scheduling.task.device.connection.max.allowed.age=2
 # ===   Event Retrieval settings                        ===
 # =========================================================
 # Interval of scheduled task.
-scheduling.task.event.retrieval.cron.expression=0 0/30 0-7,12,16-23 * * *
+scheduling.task.event.retrieval.cron.expression=0 */5 * * * *
 scheduling.task.event.retrieval.cron.timezone=Europe/Amsterdam
 # Number of threads in thread pool.
 scheduling.task.event.retrieval.pool.size=10
@@ -195,6 +195,10 @@ scheduling.task.event.retrieval.pool.size=10
 scheduling.task.event.retrieval.manufacturer.name=KAIFA
 # Maximal allowed age in hours of the latest event / communication for a device.
 scheduling.task.event.retrieval.max.allowed.age=24
+# Waiting time in minutes for exponential back off.
+scheduling.task.event.retrieval.default.wait.time=30
+# Maximal waiting time in hours for exponential back off.
+scheduling.task.event.retrieval.max.backoff=24
 
 
 
