--- a/osgp/platform/osgp-adapter-domain-publiclighting/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-publiclighting/pom.xml
@@ -176,6 +176,11 @@
 
     <!-- Testing dependencies -->
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -184,6 +189,10 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
     </dependency>
   </dependencies>
 </project>
