FLEX-4917 ~ Processes review comments.

--- a/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -195,6 +195,8 @@ scheduling.task.event.retrieval.pool.size=10
 scheduling.task.event.retrieval.manufacturer.name=KAIFA
 # Maximal allowed age in hours of the latest event / communication for a device.
 scheduling.task.event.retrieval.max.allowed.age=24
+# Base number for exponential back off.
+scheduling.task.event.retrieval.base.number=2
 # Waiting time in minutes for exponential back off.
 scheduling.task.event.retrieval.default.wait.time=30
 # Maximal waiting time in hours for exponential back off.
