FLEX-4917 ~ Adds hysteresis to exponential back off calculation.

--- a/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -201,6 +201,8 @@ scheduling.task.event.retrieval.back.off.multiplier=2
 scheduling.task.event.retrieval.default.wait.time=30
 # Maximal waiting time in hours for exponential back off.
 scheduling.task.event.retrieval.max.backoff=24
+# Hysteresis in minutes for exponential back off.
+scheduling.task.event.retrieval.hysteresis=2
 
 
 
