--- a/osgp/platform/osgp-adapter-domain-smartmetering/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-smartmetering/pom.xml
@@ -182,6 +182,12 @@
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
