--- a/osgp/platform/osgp-adapter-domain-admin/src/main/resources/osgp-adapter-domain-admin.properties
+++ b/osgp/platform/osgp-adapter-domain-admin/src/main/resources/osgp-adapter-domain-admin.properties
@@ -29,137 +29,63 @@ hibernate.show_sql=false
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
+# =========================================================
+# MESSAGING CONFIG
+# =========================================================
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+jms.default.broker.url=failover:(ssl://localhost:61617)
 
-jms.default.initial.redelivery.delay=0
+# Pooled Connection Factory
+jms.default.connection.pool.idle.timeout=30000
+
+# Message Listener Container
+jms.default.concurrent.consumers=2
+jms.default.max.concurrent.consumers=10
+
+# JMS Template
+jms.default.explicit.qos.enabled=true
+jms.default.delivery.persistent=true
+jms.default.time.to.live=3600000
+
+# Redelivery Policy
+jms.default.initial.redelivery.delay=60000
 jms.default.maximum.redeliveries=3
-jms.default.maximum.redelivery.delay=60000
-jms.default.redelivery.delay=10000
+jms.default.maximum.redelivery.delay=300000
+jms.default.redelivery.delay=60000
 jms.default.back.off.multiplier=2
 jms.default.use.exponential.back.off=true
 
-# =========================================================
-# JMS Settings: incoming web service requests
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.incoming.ws.requests
+#----------------------------------------------------------
 jms.incoming.ws.requests.queue=domain-admin.1_0.ws-admin.1_0.requests
 
-# --- CONCURRENT CONSUMERS ---
-jms.incoming.ws.requests.concurrent.consumers=2
-jms.incoming.ws.requests.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.incoming.ws.requests.initial.redelivery.delay=60000
-jms.incoming.ws.requests.maximum.redeliveries=3
-jms.incoming.ws.requests.maximum.redelivery.delay=300000
-jms.incoming.ws.requests.redelivery.delay=60000
-jms.incoming.ws.requests.back.off.multiplier=2
-jms.incoming.ws.requests.use.exponential.back.off=true
-
-
-# =========================================================
-# JMS Settings: outgoing web service responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.outgoing.ws.responses
+#----------------------------------------------------------
 jms.outgoing.ws.responses.queue=ws-admin.1_0.domain-admin.1_0.responses
-
-# --- DELIVERY OPTIONS ---
-jms.outgoing.ws.responses.explicit.qos.enabled=true
-jms.outgoing.ws.responses.delivery.persistent=true
-jms.outgoing.ws.responses.time.to.live=3600000
 jms.outgoing.ws.responses.receive.timeout=10
 
-# --- REDELIVERY POLICY ---
-jms.outgoing.ws.responses.maximum.redeliveries=3
-jms.outgoing.ws.responses.initial.redelivery.delay=60000
-jms.outgoing.ws.responses.redelivery.delay=60000
-jms.outgoing.ws.responses.maximum.redelivery.delay=300000
-jms.outgoing.ws.responses.back.off.multiplier=2
-jms.outgoing.ws.responses.use.exponential.back.off=true
-
-
-# =========================================================
-# JMS Settings: outgoing OSGP core requests
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.outgoing.osgp.core.requests
+#----------------------------------------------------------
 jms.outgoing.osgp.core.requests.queue=osgp-core.1_0.domain-admin.1_0.requests
 
-# --- DELIVERY OPTIONS ---
-jms.outgoing.osgp.core.requests.explicit.qos.enabled=true
-jms.outgoing.osgp.core.requests.delivery.persistent=true
-jms.outgoing.osgp.core.requests.time.to.live=3600000
-
-# --- REDELIVERY POLICY ---
-jms.outgoing.osgp.core.requests.initial.redelivery.delay=60000
-jms.outgoing.osgp.core.requests.maximum.redeliveries=3
-jms.outgoing.osgp.core.requests.maximum.redelivery.delay=300000
-jms.outgoing.osgp.core.requests.redelivery.delay=60000
-jms.outgoing.osgp.core.requests.back.off.multiplier=2
-jms.outgoing.osgp.core.requests.use.exponential.back.off=true
-
-
-# =========================================================
-# JMS Settings: incoming OSGP core responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.incoming.osgp.core.responses
+#----------------------------------------------------------
 jms.incoming.osgp.core.responses.queue=domain-admin.1_0.osgp-core.1_0.responses
 
-# --- CONCURRENT CONSUMERS ---
-jms.incoming.osgp.core.responses.concurrent.consumers=2
-jms.incoming.osgp.core.responses.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.incoming.osgp.core.responses.maximum.redeliveries=3
-jms.incoming.osgp.core.responses.initial.redelivery.delay=60000
-jms.incoming.osgp.core.responses.redelivery.delay=60000
-jms.incoming.osgp.core.responses.maximum.redelivery.delay=300000
-jms.incoming.osgp.core.responses.back.off.multiplier=2
-jms.incoming.osgp.core.responses.use.exponential.back.off=true
-
-
-# =========================================================
-# JMS Settings: incoming OSGP core requests
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.incoming.osgp.core.requests
+#----------------------------------------------------------
 jms.incoming.osgp.core.requests.queue=domain-admin.1_0.osgp-core.1_0.requests
 
-# --- CONCURRENT CONSUMERS ---
-jms.incoming.osgp.core.requests.concurrent.consumers=2
-jms.incoming.osgp.core.requests.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.incoming.osgp.core.requests.maximum.redeliveries=3
-jms.incoming.osgp.core.requests.initial.redelivery.delay=60000
-jms.incoming.osgp.core.requests.redelivery.delay=60000
-jms.incoming.osgp.core.requests.maximum.redelivery.delay=300000
-jms.incoming.osgp.core.requests.back.off.multiplier=2
-jms.incoming.osgp.core.requests.use.exponential.back.off=true
-
-
-# =========================================================
-# JMS Settings: outgoing OSGP core responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.outgoing.osgp.core.responses
+#----------------------------------------------------------
 jms.outgoing.osgp.core.responses.queue=osgp-core.1_0.domain-admin.1_0.responses
-
-# --- DELIVERY OPTIONS ---
-jms.outgoing.osgp.core.responses.explicit.qos.enabled=true
-jms.outgoing.osgp.core.responses.delivery.persistent=true
-jms.outgoing.osgp.core.responses.time.to.live=3600000
-
-# --- REDELIVERY POLICY ---
-jms.outgoing.osgp.core.responses.initial.redelivery.delay=60000
-jms.outgoing.osgp.core.responses.maximum.redeliveries=3
-jms.outgoing.osgp.core.responses.maximum.redelivery.delay=300000
-jms.outgoing.osgp.core.responses.redelivery.delay=60000
-jms.outgoing.osgp.core.responses.back.off.multiplier=2
-jms.outgoing.osgp.core.responses.use.exponential.back.off=true
 
 # =========================================================
