OC-527 ~ Updates domain messaging configuration

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -34,9 +34,7 @@ flyway.init.on.migrate=true
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 
-# =========================================================
-# ===   DOMAIN MESSAGING CONFIG                         ===
-# =========================================================
+
 
 # ActiveMQ broker
 jms.domain.activemq.broker.url=failover:(ssl://localhost:61617)
@@ -46,31 +44,71 @@ jms.activemq.trust.all.packages=true
 # Then jms.activemq.trusted packages should be enabled
 # jms.activemq.trusted.packages=org.opensmartgridplatform,org.joda.time,java.util
 
-# Default redelivery settings 
-jms.domain.default.initial.redelivery.delay=0
-jms.domain.default.maximum.redeliveries=3
-jms.domain.default.maximum.redelivery.delay=60000
-jms.domain.default.redelivery.delay=10000
-jms.domain.default.back.off.multiplier=2
-jms.domain.default.use.exponential.back.off=true
-   
-# JMS Settings for receiving Domain Requests
-jms.incoming.domain.requests.concurrent.consumers=2
-jms.incoming.domain.requests.max.concurrent.consumers=10
+# =========================================================
+# ===   DOMAIN MESSAGING CONFIG                         ===
+# =========================================================
+#----------------------------------------------------------
+# jms.domain.default
+#----------------------------------------------------------
+jms.domain.default.broker.url=failover:(ssl://localhost:61617)
+jms.domain.default.queue=jms-domain-default-from-properties
 
-# JMS Settings for sending Domain Responses
-jms.outgoing.domain.responses.explicit.qos.enabled=true
-jms.outgoing.domain.responses.delivery.persistent=true
-jms.outgoing.domain.responses.time.to.live=3600000
+#----------------------------------------------------------
+# jms.domain.admin
+#----------------------------------------------------------
+jms.domain.admin.incoming.requests.queue=osgp-core.1_0.domain-admin.1_0.requests
+jms.domain.admin.incoming.responses.queue=osgp-core.1_0.domain-admin.1_0.responses
+jms.domain.admin.outgoing.requests.queue=domain-admin.1_0.osgp-core.1_0.requests
+jms.domain.admin.outgoing.responses.queue=domain-admin.1_0.osgp-core.1_0.responses
 
-# JMS Settings for sending Incoming Domain Requests
-jms.outgoing.domain.requests.explicit.qos.enabled=true
-jms.outgoing.domain.requests.delivery.persistent=true
-jms.outgoing.domain.requests.time.to.live=3600000
+#----------------------------------------------------------
+# jms.domain.core
+#----------------------------------------------------------
+jms.domain.core.incoming.requests.queue=osgp-core.1_0.domain-core.1_0.requests
+jms.domain.core.incoming.responses.queue=osgp-core.1_0.domain-core.1_0.responses
+jms.domain.core.outgoing.requests.queue=domain-core.1_0.osgp-core.1_0.requests
+jms.domain.core.outgoing.responses.queue=domain-core.1_0.osgp-core.1_0.responses
 
-# JMS Settings for receiving Incoming Domain Responses 
-jms.incoming.domain.responses.concurrent.consumers=2
-jms.incoming.domain.responses.max.concurrent.consumers=10
+#----------------------------------------------------------
+# jms.domain.publiclighting
+#----------------------------------------------------------
+jms.domain.publiclighting.incoming.requests.queue=osgp-core.1_0.domain-publiclighting.1_0.requests
+jms.domain.publiclighting.incoming.responses.queue=osgp-core.1_0.domain-publiclighting.1_0.responses
+jms.domain.publiclighting.outgoing.requests.queue=domain-publiclighting.1_0.osgp-core.1_0.requests
+jms.domain.publiclighting.outgoing.responses.queue=domain-publiclighting.1_0.osgp-core.1_0.responses
+
+#----------------------------------------------------------
+# jms.domain.tariffswitching
+#----------------------------------------------------------
+jms.domain.tariffswitching.incoming.requests.queue=osgp-core.1_0.domain-tariffswitching.1_0.requests
+jms.domain.tariffswitching.incoming.responses.queue=osgp-core.1_0.domain-tariffswitching.1_0.responses
+jms.domain.tariffswitching.outgoing.requests.queue=domain-tariffswitching.1_0.osgp-core.1_0.requests
+jms.domain.tariffswitching.outgoing.responses.queue=domain-tariffswitching.1_0.osgp-core.1_0.responses
+
+#----------------------------------------------------------
+# jms.domain.smartmetering
+#----------------------------------------------------------
+jms.domain.smartmetering.incoming.requests.queue=osgp-core.1_0.domain-smartmetering.1_0.requests
+jms.domain.smartmetering.incoming.responses.queue=osgp-core.1_0.domain-smartmetering.1_0.responses
+jms.domain.smartmetering.outgoing.requests.queue=domain-smartmetering.1_0.osgp-core.1_0.requests
+jms.domain.smartmetering.outgoing.responses.queue=domain-smartmetering.1_0.osgp-core.1_0.responses
+
+#----------------------------------------------------------
+# jms.domain.microgrids
+#----------------------------------------------------------
+jms.domain.microgrids.incoming.requests.queue=osgp-core.1_0.domain-microgrids.1_0.requests
+jms.domain.microgrids.incoming.responses.queue=osgp-core.1_0.domain-microgrids.1_0.responses
+jms.domain.microgrids.outgoing.requests.queue=domain-microgrids.1_0.osgp-core.1_0.requests
+jms.domain.microgrids.outgoing.responses.queue=domain-microgrids.1_0.osgp-core.1_0.responses
+
+
+#----------------------------------------------------------
+# jms.domain.distributionautomation
+#----------------------------------------------------------
+jms.domain.distributionautomation.incoming.requests.queue=osgp-core.1_0.domain-distributionautomation.1_0.requests
+jms.domain.distributionautomation.incoming.responses.queue=osgp-core.1_0.domain-distributionautomation.1_0.responses
+jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionautomation.1_0.osgp-core.1_0.requests
+jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
 
 
 # =========================================================
@@ -82,7 +120,7 @@ jms.protocol.activemq.broker.url=failover:(ssl://localhost:61617)
 
 # ActiveMQ message group cache size
 # default value for the cachedMessageGroupMapFactory cacheSize is 1024
-# when changing the value below, make sure it stays in sync with the activemq configuration. 
+# when changing the value below, make sure it stays in sync with the activemq configuration.
 # This can be achieved by adding the following policy entry in activemq.xml
 #  <policyEntry queue=">">
 #    <messageGroupMapFactory>
@@ -91,7 +129,7 @@ jms.protocol.activemq.broker.url=failover:(ssl://localhost:61617)
 #  </policyEntry>
 jms.protocol.activemq.messagegroup.cachesize=1024
 
-# Default redelivery settings 
+# Default redelivery settings
 jms.protocol.default.initial.redelivery.delay=0
 jms.protocol.default.maximum.redeliveries=3
 jms.protocol.default.maximum.redelivery.delay=60000
@@ -99,7 +137,7 @@ jms.protocol.default.redelivery.delay=10000
 jms.protocol.default.back.off.multiplier=2
 jms.protocol.default.use.exponential.back.off=true
 
-# JMS Settings for sending Protocol Requests 
+# JMS Settings for sending Protocol Requests
 jms.outgoing.protocol.requests.explicit.qos.enabled=true
 jms.outgoing.protocol.requests.delivery.persistent=true
 jms.outgoing.protocol.requests.time.to.live=3600000
