OC-527 ~ Updates broker URL properties to fix build
TODO - Update the default broker URL property in the deployment scripts

--- a/osgp/platform/osgp-adapter-domain-admin/src/main/resources/osgp-adapter-domain-admin.properties
+++ b/osgp/platform/osgp-adapter-domain-admin/src/main/resources/osgp-adapter-domain-admin.properties
@@ -35,7 +35,8 @@ entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 #----------------------------------------------------------
 # jms.default
 #----------------------------------------------------------
-jms.default.broker.url=failover:(ssl://localhost:61617)
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
 # Pooled Connection Factory
 jms.default.connection.pool.idle.timeout=30000
