--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -34,23 +34,14 @@ flyway.init.on.migrate=true
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
 
-
-
-# ActiveMQ broker
-jms.domain.activemq.broker.url=failover:(ssl://localhost:61617)
-
-jms.activemq.trust.all.packages=true
-# When trust.all.packages=false
-# Then jms.activemq.trusted packages should be enabled
-# jms.activemq.trusted.packages=org.opensmartgridplatform,org.joda.time,java.util
-
 # =========================================================
 # ===   DOMAIN MESSAGING CONFIG                         ===
 # =========================================================
 #----------------------------------------------------------
 # jms.domain.default
 #----------------------------------------------------------
-jms.domain.default.broker.url=failover:(ssl://localhost:61617)
+#jms.domain.default.broker.url=failover:(ssl://localhost:61617)
+jms.domain.default.broker.url=failover:(tcp://localhost:61616)
 jms.domain.default.queue=jms-domain-default-from-properties
 
 #----------------------------------------------------------
@@ -114,6 +105,12 @@ jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionaut
 # =========================================================
 # ===   PROTOCOL MESSAGING CONFIG                       ===
 # =========================================================
+
+jms.activemq.trust.all.packages=true
+# When trust.all.packages=false
+# Then jms.activemq.trusted packages should be enabled
+# jms.activemq.trusted.packages=org.opensmartgridplatform,org.joda.time,java.util
+
 
 # ActiveMQ broker
 jms.protocol.activemq.broker.url=failover:(ssl://localhost:61617)
