OC-531 ~ Updates message broker config for protocol queues in osgp core

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -106,15 +106,6 @@ jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionaut
 # ===   PROTOCOL MESSAGING CONFIG                       ===
 # =========================================================
 
-jms.activemq.trust.all.packages=true
-# When trust.all.packages=false
-# Then jms.activemq.trusted packages should be enabled
-# jms.activemq.trusted.packages=org.opensmartgridplatform,org.joda.time,java.util
-
-
-# ActiveMQ broker
-jms.protocol.activemq.broker.url=failover:(ssl://localhost:61617)
-
 # ActiveMQ message group cache size
 # default value for the cachedMessageGroupMapFactory cacheSize is 1024
 # when changing the value below, make sure it stays in sync with the activemq configuration.
@@ -126,32 +117,53 @@ jms.protocol.activemq.broker.url=failover:(ssl://localhost:61617)
 #  </policyEntry>
 jms.protocol.activemq.messagegroup.cachesize=1024
 
-# Default redelivery settings
-jms.protocol.default.initial.redelivery.delay=0
-jms.protocol.default.maximum.redeliveries=3
-jms.protocol.default.maximum.redelivery.delay=60000
-jms.protocol.default.redelivery.delay=10000
-jms.protocol.default.back.off.multiplier=2
-jms.protocol.default.use.exponential.back.off=true
+#----------------------------------------------------------
+# jms.protocol.dlms
+#----------------------------------------------------------
+# jms.protocol.dlms.outgoing.requests
+jms.protocol.dlms.outgoing.requests.queue=protocol-dlms.1_0.osgp-core.1_0.requests
+# jms.protocol.dlms.incoming.responses
+jms.protocol.dlms.incoming.responses.queue=osgp-core.1_0.protocol-dlms.1_0.responses
+# jms.protocol.dlms.incoming.requests
+jms.protocol.dlms.incoming.requests.queue=osgp-core.1_0.protocol-dlms.1_0.requests
+# jms.protocol.dlms.outgoing.responses
+jms.protocol.dlms.outgoing.responses.queue=protocol-dlms.1_0.osgp-core.1_0.responses
 
-# JMS Settings for sending Protocol Requests
-jms.outgoing.protocol.requests.explicit.qos.enabled=true
-jms.outgoing.protocol.requests.delivery.persistent=true
-jms.outgoing.protocol.requests.time.to.live=3600000
+#----------------------------------------------------------
+# jms.protocol.iec60870
+#----------------------------------------------------------
+# jms.protocol.iec60870.outgoing,requests
+jms.protocol.iec60870.outgoing.requests.queue=protocol-iec60870.1_0.osgp-core.1_0.requests
+# jms.protocol.iec60870.incoming.responses
+jms.protocol.iec60870.incoming.responses.queue=osgp-core.1_0.protocol-iec60870.1_0.responses
+# jms.protocol.iec60870.incoming.requests
+jms.protocol.iec60870.incoming.requests.queue=osgp-core.1_0.protocol-iec60870.1_0.requests
+# jms.protocol.iec60870.outgoing,responses
+jms.protocol.iec60870.outgoing.responses.queue=protocol-iec60870.1_0.osgp-core.1_0.responses
 
-# JMS Settings for receiving Protocol Responses
-jms.incoming.protocol.responses.concurrent.consumers=2
-jms.incoming.protocol.responses.max.concurrent.consumers=10
+#----------------------------------------------------------
+# jms.protocol.iec61850
+#----------------------------------------------------------
+# jms.protocol.iec61850.outgoing.requests
+jms.protocol.iec61850.outgoing.requests.queue=protocol-iec61850.1_0.osgp-core.1_0.requests
+# jms.protocol.iec61850.incoming.responses
+jms.protocol.iec61850.incoming.responses.queue=osgp-core.1_0.protocol-iec61850.1_0.responses
+# jms.protocol.iec61850.incoming.requests
+jms.protocol.iec61850.incoming.requests.queue=osgp-core.1_0.protocol-iec61850.1_0.requests
+# jms.protocol.iec61850.outgoing.responses
+jms.protocol.iec61850.outgoing.responses.queue=protocol-iec61850.1_0.osgp-core.1_0.responses
 
-
-# JMS Settings for receiving Incoming Protocol Requests
-jms.incoming.protocol.requests.concurrent.consumers=2
-jms.incoming.protocol.requests.max.concurrent.consumers=10
-
-# JMS Settings for sending Incoming Protocol Responses
-jms.outgoing.protocol.responses.explicit.qos.enabled=true
-jms.outgoing.protocol.responses.delivery.persistent=true
-jms.outgoing.protocol.responses.time.to.live=3600000
+#----------------------------------------------------------
+# jms.protocol.oslp
+#----------------------------------------------------------
+# jms.protocol.oslp.outgoing.requests
+jms.protocol.oslp.outgoing.requests.queue=protocol-oslp-elster.1_0.osgp-core.1_0.requests
+# jms.protocol.oslp.incoming.responses
+jms.protocol.oslp.incoming.responses.queue=osgp-core.1_0.protocol-oslp-elster.1_0.responses
+# jms.protocol.oslp.incoming.requests
+jms.protocol.oslp.incoming.requests.queue=osgp-core.1_0.protocol-oslp-elster.1_0.requests
+# jms.protocol.oslp.outgoing.responses
+jms.protocol.oslp.outgoing.responses.queue=protocol-oslp-elster.1_0.osgp-core.1_0.responses
 
 # =========================================================
 # ===   SCHEDULING CONFIG                               ===
@@ -171,6 +183,11 @@ max.retry.count=3
 # =========================================================
 # ===   JMS Settings: Log Item Requests                 ===
 # =========================================================
+jms.activemq.trust.all.packages=true
+# When trust.all.packages=false
+# Then jms.activemq.trusted packages should be enabled
+# jms.activemq.trusted.packages=org.opensmartgridplatform,org.joda.time,java.util
+
 
 # --- DEFAULT DESTINATION ---
 jms.log.item.requests.queue=osgp.logging.protocol
