OC-531 ~ Implements new jms configuration in signing server

--- a/osgp/protocol-adapter-oslp/signing-server/src/main/resources/signing-server.properties
+++ b/osgp/protocol-adapter-oslp/signing-server/src/main/resources/signing-server.properties
@@ -22,67 +22,25 @@ signing.server.security.provider=SunEC
 
 
 # =========================================================
-# --- JMS Settings ---
+# ===   MESSAGING CONFIG                                ===
 # =========================================================
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
-jms.default.initial.redelivery.delay=0
-jms.default.maximum.redeliveries=3
-jms.default.maximum.redelivery.delay=60000
-jms.default.redelivery.delay=10000
-jms.default.back.off.multiplier=2
-jms.default.use.exponential.back.off=true
-
-
-# =========================================================
-#  JMS Settings: Incoming Requests 
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# Incoming requests: jms.signing.server.requests
+#----------------------------------------------------------
 jms.signing.server.requests.queue=signing-server.1_0.requests
-
-# --- CONCURRENT CONSUMERS ---
 jms.signing.server.requests.concurrent.consumers=5
 jms.signing.server.requests.max.concurrent.consumers=50
 
-# --- REDELIVERY POLICY ---
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.signing.server.requests.initial.redelivery.delay=60000
-jms.signing.server.requests.maximum.redeliveries=3
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.signing.server.requests.maximum.redelivery.delay=300000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.signing.server.requests.redelivery.delay=60000
-jms.signing.server.requests.back.off.multiplier=2
-jms.signing.server.requests.use.exponential.back.off=true
-
-
-# =========================================================
-#  JMS Settings: Outgoing Responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# Outgoing responses: jms.signing.server.responses
+#----------------------------------------------------------
 jms.signing.server.responses.queue=signing-server.1_0.responses
-
-# --- DELIVERY OPTIONS ---
-# Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.signing.server.responses.explicit.qos.enabled=true
-# Set delivery persistent
-jms.signing.server.responses.delivery.persistent=true
-# Set Time to live in ms (1800000 = 30 minutes)
 jms.signing.server.responses.time.to.live=1800000
-# Set receive timeout
-jms.signing.server.responses.receive.timeout=10
-
-# --- REDELIVERY POLICY ---
-jms.signing.server.responses.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.signing.server.responses.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.signing.server.responses.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.signing.server.responses.maximum.redelivery.delay=300000
-jms.signing.server.responses.back.off.multiplier=2
-jms.signing.server.responses.use.exponential.back.off=true
 
 # =========================================================
