OC-531 ~ Updates default broker url in ws admin

--- a/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
+++ b/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
@@ -68,7 +68,7 @@ web.service.notification.organisation=OSGP
 # jms.default
 #----------------------------------------------------------
 #jms.default.broker.url=failover:(ssl://localhost:61617)
-jms.default.broker.url=failover:(ssl://localhost:61616)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
 #----------------------------------------------------------
 # jms.admin.requests
