OC-531 ~ Reverts moving OutgoingLoggingRequestsMessagingConfig

--- a/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
+++ b/osgp/platform/osgp-adapter-ws-admin/src/main/resources/osgp-adapter-ws-admin.properties
@@ -81,9 +81,9 @@ jms.admin.requests.queue=domain-admin.1_0.ws-admin.1_0.requests
 jms.admin.responses.queue=ws-admin.1_0.domain-admin.1_0.responses
 
 #----------------------------------------------------------
-# jms.common.logging
+# jms.admin.logging
 #----------------------------------------------------------
-jms.common.logging.queue=osgp.logging.ws
+jms.admin.logging.queue=osgp.logging.ws
 
 # =========================================================
 
