--- a/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/src/main/resources/osgp-adapter-ws-publiclighting.properties
@@ -59,105 +59,30 @@ web.service.notification.application.name=OSGP
 publiclighting.scheduling.job.resend.notification.cron.expression=0 0/1 * * * ?
 publiclighting.scheduling.job.resend.notification.maximum=3
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
-
-jms.default.initial.redelivery.delay=0
-jms.default.maximum.redeliveries=3
-jms.default.maximum.redelivery.delay=60000
-jms.default.redelivery.delay=10000
-jms.default.back.off.multiplier=2
-jms.default.use.exponential.back.off=true
-
 # =========================================================
-# ===   JMS Settings: Public Lighting Requests          ===
+# MESSAGING CONFIG
 # =========================================================
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.publiclighting.requests
+#----------------------------------------------------------
 jms.publiclighting.requests.queue=domain-publiclighting.1_0.ws-publiclighting.1_0.requests
 
-# --- DELIVERY OPTIONS ---
-# Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.publiclighting.requests.explicit.qos.enabled=true
-# Set delivery persistent
-jms.publiclighting.requests.delivery.persistent=true
-# Set Time to live in ms (180000 = 3 minutes)
-jms.publiclighting.requests.time.to.live=3600000
-
-# --- CONCURRENT CONSUMERS ---
-jms.publiclighting.requests.concurrent.consumers=2
-jms.publiclighting.requests.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.publiclighting.requests.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.publiclighting.requests.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.publiclighting.requests.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 ms = 5 min)
-jms.publiclighting.requests.maximum.redelivery.delay=300000
-jms.publiclighting.requests.back.off.multiplier=2
-jms.publiclighting.requests.use.exponential.back.off=true
-
-
-# =========================================================
-# ===   JMS Settings: Public Lighting Responses         ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.publiclighting,responses
+#----------------------------------------------------------
 jms.publiclighting.responses.queue=ws-publiclighting.1_0.domain-publiclighting.1_0.responses
-
-# --- DELIVERY OPTIONS ---
-# Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.publiclighting.responses.explicit.qos.enabled=true
-# Set delivery persistent
-jms.publiclighting.responses.delivery.persistent=true
-# Set Time to live in ms (1800000 = 30 minutes)
-jms.publiclighting.responses.time.to.live=3600000
-# Set receive timeout
 jms.publiclighting.responses.receive.timeout=100
 
-# --- CONCURRENT CONSUMERS ---
-jms.publiclighting.responses.concurrent.consumers=2
-jms.publiclighting.responses.max.concurrent.consumers=10
-
-# ---REDELIVERY POLICY ---
-jms.publiclighting.responses.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.publiclighting.responses.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.publiclighting.responses.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.publiclighting.responses.maximum.redelivery.delay=300000
-jms.publiclighting.responses.back.off.multiplier=2
-jms.publiclighting.responses.use.exponential.back.off=true
-
-# =========================================================
-# ===   JMS Settings: Common Logging                    ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.publiclighting.logging
+#----------------------------------------------------------
 jms.publiclighting.logging.queue=osgp.logging.ws
-
-# --- DELIVERY OPTIONS ---
-# Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.publiclighting.logging.explicit.qos.enabled=true
-# Set delivery persistent
-jms.publiclighting.logging.delivery.persistent=true
-# Set Time to live in ms (180000 = 3 minutes)
-jms.publiclighting.logging.time.to.live=3600000
-
-# --- REDELIVERY POLICY ---
-jms.publiclighting.logging.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.publiclighting.logging.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.publiclighting.logging.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.publiclighting.logging.maximum.redelivery.delay=300000
-jms.publiclighting.logging.back.off.multiplier=2
-jms.publiclighting.logging.use.exponential.back.off=true
-
 
 # =========================================================
 # SCHEDULING CONFIG
