OC-531 ~ Refactors messaging configuration in protocol adapter OSLP

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -118,7 +118,7 @@ jms.outgoing.osgp.core.requests.time.to.live=180000
 #----------------------------------------------------------
 # jms.incoming.osgp.core.responses
 #----------------------------------------------------------
-jms.incoming.osgp.responses.queue=protocol-oslp-elster.1_0.osgp-core.1_0.responses
+jms.incoming.osgp.core.responses.queue=protocol-oslp-elster.1_0.osgp-core.1_0.responses
 
 #----------------------------------------------------------
 # jms.outgoing.signing.server.requests
