OC-531 ~ Updates messaging config in smartmetering ws adapter

--- a/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
+++ b/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
@@ -53,58 +53,33 @@ soap.message.printing.enabled=true
 
 application.name=OSGP_ADAPTER_WS_SMARTMETERING
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
-
-# --- DELIVERY OPTIONS ---
-#Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.default.explicit.qos.enabled=true
-#Set delivery persistent
-jms.default.delivery.persistent=true
-#Set Time to live in ms (300000 = 5 minutes)
-jms.default.time.to.live=3600000
-
-# --- CONCURRENT CONSUMERS ---
-jms.default.concurrent.consumers=2
-jms.default.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-jms.default.maximum.redeliveries=3
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.default.initial.redelivery.delay=60000
-# Set redelivery delay in ms (60000 = 1 min)
-jms.default.redelivery.delay=60000
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.default.maximum.redelivery.delay=300000
-jms.default.back.off.multiplier=2
-jms.default.use.exponential.back.off=true
-
 # =========================================================
-# ===   JMS Settings: Smart Metering Requests           ===
+# MESSAGING CONFIG
 # =========================================================
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.smartmetering.requests
+#----------------------------------------------------------
 jms.smartmetering.requests.queue=domain-smartmetering.1_0.ws-smartmetering.1_0.requests
 
-# =========================================================
-# ===   JMS Settings: Smart Metering Responses          ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.smartmetering.responses
+#----------------------------------------------------------
 jms.smartmetering.responses.queue=ws-smartmetering.1_0.domain-smartmetering.1_0.responses
 
-# =========================================================
-
-# =========================================================
-# ===   JMS Settings: Common Logging                    ===
-# =========================================================
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.smartmetering.logging
+#----------------------------------------------------------
 jms.smartmetering.logging.queue=osgp.logging.ws
 
 # =========================================================
 # ===   WS Settings: Smart Metering Notifications       ===
 # =========================================================
-
 
 web.service.notification.enabled=true
 web.service.notification.username=test-org
