OC-531 ~ Updates messaging config in DLMS protocol adapter

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -37,96 +37,46 @@ paging.default.pagesize=15
 # DLMS
 dlms.port.server=9598
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
-jms.activemq.connection.pool.max.active.sessions=500
-jms.activemq.connection.pool.size=10
-jms.activemq.connection.queue.prefetch=1
-
-# --- REDELIVERY POLICY ---
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.default.initial.redelivery.delay=60000
-jms.default.maximum.redeliveries=3
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.default.maximum.redelivery.delay=300000
-# Setredelivery delay in ms (60000 = 1 min)
-jms.default.redelivery.delay=60000
-jms.default.back.off.multiplier=2
-jms.default.use.exponential.back.off=true
-
-# --- CONCURRENT CONSUMERS ---
-jms.default.concurrent.consumers=2
-jms.default.max.concurrent.consumers=10
-
-# --- DELIVERY OPTIONS ---
-# Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
-jms.default.explicit.qos.enabled=true
-# Set delivery persistent
-jms.default.delivery.persistent=true
-# Set Time to live in ms (180000 = 3 minutes)
-jms.default.time.to.live=3600000
-# Set receive timeout
-jms.default.receive.timeout=10
 
 # =========================================================
-#  JMS Settings: Incoming Dlms Requests 
+# MESSAGING CONFIG
 # =========================================================
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
+jms.default.connection.queue.prefetch=1
 
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.dlms.requests
+#----------------------------------------------------------
 jms.dlms.requests.queue=protocol-dlms.1_0.osgp-core.1_0.requests
-
-# --- REDELIVERY POLICY ---
 jms.dlms.requests.initial.redelivery.delay=300000
 jms.dlms.requests.maximum.redelivery.delay=900000
 jms.dlms.requests.redelivery.delay=300000
 
-# =========================================================
-#  JMS Settings: Outgoing Dlms Responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.dlms.responses
+#----------------------------------------------------------
 jms.dlms.responses.queue=osgp-core.1_0.protocol-dlms.1_0.responses
-
-# --- DELIVERY OPTIONS ---
-# Set Time to live in ms (180000 = 3 minutes)
-jms.dlms.responses.time.to.live=3600000
-
-# --- REDELIVERY POLICY ---
 jms.dlms.responses.initial.redelivery.delay=300000
-jms.dlms.responses.redelivery.delay=300000
 jms.dlms.responses.maximum.redelivery.delay=900000
+jms.dlms.responses.redelivery.delay=300000
 
-# =========================================================
-
-
-# =========================================================
-# ===   JMS Settings: Dlms Log Item Requests            ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.dlms.log.item.requests
+#----------------------------------------------------------
 jms.dlms.log.item.requests.queue=osgp.logging.protocol
 
-# --- DELIVERY OPTIONS ---
-jms.dlms.log.item.requests.time.to.live=3600000
-
-# =========================================================
-
-
-# =========================================================
-#  JMS Settings: Outgoing OSGP Core Requests
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.osgp.requests
+#----------------------------------------------------------
 jms.osgp.requests.queue=osgp-core.1_0.protocol-dlms.1_0.requests
 
-# --- DELIVERY OPTIONS ---
-jms.osgp.requests.time.to.live=3600000
-
-# =========================================================
-#  JMS Settings: Incoming OSGP Core Responses 
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.osgp.responses
+#----------------------------------------------------------
 jms.osgp.responses.queue=protocol-dlms.1_0.osgp-core.1_0.responses
 
 
